xibosignage/xibo#812 Hotfixes, regarding Dan's notes. - Lock Position and Hide Controls now work properly. - Actions Tab translated - Tooltip added - Tab issue when hover fixed - Code won't wrap in 2 or more lines

--- a/web/theme/default/css/xibo.css
+++ b/web/theme/default/css/xibo.css
@@ -748,7 +748,7 @@ li.active:after {
 }
 
 .nav-tabs>li {
-    margin-bottom: -4px !important;
+    margin-bottom: -5px !important;
 }
 
 .col-md-2 ul.list-group {
@@ -777,4 +777,14 @@ li.active:after {
 
 .alert.no-pad {
     padding: 4px !important;
+}
+
+ul li.tab-design:hover {
+    border-top: 2px solid white;
+    padding-bottom: 0px;
+}
+
+ul li.tab-design:hover a {
+    color: #fff !important;
+
 }
